<resources>

    <string name="app_name">MY APP PORTFOLIO</string>
    <string name="headline">My NanoDegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="button1">SPOTIFY STREAMER</string>
    <string name="button2">SCORES APP</string>
    <string name="button3">LIBRARY APP</string>
    <string name="button4">BUILD IT BIGGER </string>
    <string name="button5">XYZ READER</string>
    <string name="button6">CAPSTONE: MY OWN APP</string>


</resources>
