<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="grobyo.com.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:layout_height="wrap_content"
        android:text="@string/headline"
        android:layout_centerHorizontal="true"
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:textSize="30dp"
        android:textColor="@color/headline"/>

    <Button
        android:id="@+id/button1"
        style="@style/Button66.Style1"
        android:text="@string/button1"
        android:layout_below="@id/TextView1"
        android:onClick="btnClicked"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button2"
        style="@style/Button66.Style1"
        android:text="@string/button2"
        android:layout_centerHorizontal="true"
        android:onClick="btnClicked"
        android:layout_below="@+id/button1" />

    <Button
        android:id="@+id/button3"
        style="@style/Button66.Style1"
        android:text="@string/button3"
        android:layout_centerHorizontal="true"
        android:onClick="btnClicked"
        android:layout_below="@+id/button2"/>

    <Button
        android:id="@+id/button4"
        style ="@style/Button66.Style1"
        android:text="@string/button4"
        android:layout_centerHorizontal="true"
        android:onClick="btnClicked"
        android:layout_below="@+id/button3" />

    <Button
        android:id="@+id/button5"
        style="@style/Button66.Style1"
        android:text="@string/button5"
        android:onClick="btnClicked"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button4" />

    <Button
        style="@style/Capstone.Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button6"
        android:id="@+id/button6"
        android:onClick="btnClicked"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button5"/>

</RelativeLayout>
